targets/srv0/k3s/dscpln/dscpln.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dscpln
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dscpln
  template:
    metadata:
      labels:
        app: dscpln
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: dscpln
          image: imranrdev/dscpln:latest@sha256:89ad11f983d92606caf4b1f742857793f1f9b4718934cbc9511e4ae3ad424e80
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3300
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 3300
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: dscpln-data
              mountPath: /data
              readOnly: true
      volumes:
        - name: dscpln-data
          persistentVolumeClaim:
            claimName: dscpln-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dscpln
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: dscpln
  ports:
    - port: 3300
      targetPort: 3300
